--- a/Checkr/Views/_ViewImports.cshtml
+++ b/Checkr/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Checkr
 @using Checkr.Entities
-@using Checkr.ViewModels
+@using Checkr.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
