--- a/Checkr/Views/Shared/_Layout.cshtml.css
+++ b/Checkr/Views/Shared/_Layout.cshtml.css
@@ -39,10 +39,23 @@ button.accept-policy {
   line-height: inherit;
 }
 
+.navbar {
+    background-color: #333;
+}
+
+.navbar-dark .navbar-brand,
+.navbar-dark .navbar-nav .nav-link {
+    color: #fff;
+}
+
+.navbar-dark .navbar-toggler-icon {
+    background-color: #fff;
+}
+
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
 }
