--- a/Checkr/Views/Boards/Users.cshtml
+++ b/Checkr/Views/Boards/Users.cshtml
@@ -1,8 +1,9 @@
 ﻿@model Board
 @{
+    ViewData["BoardId"] = Model.Id;
 }
 
-<h1>All Members for Board: @Model.BoardName</h1>
+<h1>All Members for Board: @Model.Name</h1>
 
 @if (Model.Users.Any())
 {
@@ -18,6 +19,7 @@
                 <div class="d-flex">
                     <li>@user.UserName</li>
                     <form asp-action="RemoveUserFromBoard" asp-route-id="@Model.Id" asp-route-userId="@user.Id" method="post">
+                        @Html.AntiForgeryToken()
                         <button type="submit" class="btn btn-primary btn-sm">Remove Member</button>
                     </form>
                 </div>
@@ -30,6 +32,11 @@ else
     <p>No members found for this board.</p>
 }
 
-<form asp-action="AddUserToBoard" asp-route-id="@Model.Id" method="get">
-    <button type="submit" class="btn btn-primary btn-sm">Add Member</button>
-</form>
+<div class="dropdown me-2">
+    <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
+        <i class="bi bi-plus"></i>
+    </button>
+    <div class="p-2 dropdown-menu dropdown-menu-end bg-dark text-light" aria-labelledby="togglePartialViewButton">
+        @await Html.PartialAsync("AddUserToBoard", ViewData)
+    </div>
+</div>
