--- a/Checkr/Views/Boards/AddUserToBoard.cshtml
+++ b/Checkr/Views/Boards/AddUserToBoard.cshtml
@@ -1,15 +1,14 @@
 ﻿@{
 }
 
-<h1>Add User to Board</h1>
-
 <form asp-controller="Boards" asp-action="AddUserToBoard" method="post">
+    @Html.AntiForgeryToken()
+    <input type="hidden" value="@ViewData["BoardId"]" name="id" />
     <div class="form-group">
-        @Html.AntiForgeryToken()
-        <input type="hidden" value="@ViewData["BoardId"]" name="id" />
-        <label for="UserName">User Name</label>
-        <input type="text" id="UserName" name="userName" class="form-control" required>
+        <label for="Email">Email</label>
+        <input type="text" id="Email" name="email" class="form-control bg-dark text-white" required>
     </div>
-
-    <button type="submit" class="btn btn-primary">Add Member</button>
+    <div class="d-flex justify-content-center mt-2">
+        <button type="submit" class="btn btn-secondary">Add User</button>
+    </div>
 </form>
