--- a/Checkr/Views/Boards/Create.cshtml
+++ b/Checkr/Views/Boards/Create.cshtml
@@ -2,16 +2,20 @@
 @{
 }
 
-<h1>Add Board</h1>
-
-<form asp-controller="Boards" asp-action="Create" method="post">
-    <div class="form-group">
-        @Html.AntiForgeryToken()
-        <input type="hidden" asp-for="OwnerId" />
-        <label asp-for="Name">Board Name</label>
-        <input asp-for="Name" class="form-control">
-        <span asp-validation-for="Name" class="text-danger"></span>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+        <h1 class="text-center">@Model.Name</h1>
+        <form asp-controller="Boards" asp-action="Create" method="post">
+            @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="OwnerId" />
+            <div class="form-group">
+                <label asp-for="Name">Board Name</label>
+                <input asp-for="Name" class="form-control bg-dark text-white">
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="d-flex justify-content-center mt-2">
+                <button type="submit" class="btn btn-dark">Create</button>
+            </div>
+        </form>
     </div>
-    <hr>
-    <button type="submit" class="btn btn-outline-success">Add Board</button>
-</form>
+</div>
