--- a/Checkr/Views/Boards/Details.cshtml
+++ b/Checkr/Views/Boards/Details.cshtml
@@ -2,65 +2,55 @@
 @{
 }
 
-<h1 class="mt-2">@Model.Name</h1>
-
-<div class="top-0 end-0 p-3">
-    <div class="col-md-4">
-        <div class="card mb-4 shadow-sm">
-            <div class="card-body d-flex justify-content-center align-items-center">
-                <form asp-controller="Boxes" asp-action="Create" method="get">
-                    <input type="hidden" name="BoardId" value="@Model.Id">
-                    <button type="submit" class="lead fw-bold btn btn-link text-decoration-none">Add Box</button>
-                </form>
+<div class="container">
+    <div class="row">
+        <h1 class="mt-2">@Model.Name</h1>
+        <div class="box-container">
+            @if (Model.Users.Count > 1)
+            {
+                <div class="col-md-4 mb-4 m-3 d-flex justify-content-center align-items-center">
+                    <div>
+                        <div class="card mb-4 shadow-sm bg-dark text-white">
+                            <div class="card-body message-container" style="height: 400px; overflow-y: auto;">
+                                @foreach (var message in Model.Messages.Reverse())
+                                {
+                                    <div class="message">
+                                        <p>@message.Content (Sent by @message.User.FirstName)</p>
+                                        <p>@message.CreatedAt</p>
+                                    </div>
+                                }
+                            </div>
+                            <div class="card-footer">
+                                <form asp-controller="Messages" asp-action="SendMessage" method="post">
+                                    @Html.AntiForgeryToken()
+                                    <input type="hidden" name="BoardId" value="@Model.Id" />
+                                    <div class="input-group">
+                                        <input type="text" name="Content" class="form-control bg-dark text-white" required />
+                                        <button type="submit" class="btn btn-secondary">Send Message</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            }
+            @if (Model.Boxes.Count > 0)
+            {
+                @foreach (var box in Model.Boxes)
+                {
+                    @await Html.PartialAsync("/Views/Boxes/Details.cshtml", box)
+                }
+            }
+            <div class="col-md-4 mb-4 m-3 d-flex justify-content-center align-items-center box-container-custom" style="height: 200px;">
+                <div class="dropdown me-2">
+                    <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-plus"></i>New Box
+                    </button>
+                    <div class="p-2 dropdown-menu dropdown-menu-end bg-dark text-light" aria-labelledby="togglePartialViewButton">
+                        @await Html.PartialAsync("/Views/Boxes/Create.cshtml", new BoxDto() { BoardId = Model.Id })
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
-
-<div class="container">
-    <div class="row">
-        @if (Model.Users.Count > 1)
-        {
-            <div class="col-md-4">
-                <div class="card mb-4 shadow-sm">
-                    <div class="card-body">
-                        @foreach (var message in Model.Messages.Reverse())
-                        {
-                            <p>@message.Content (Sent by @message.User.FirstName)</p>
-                            <p>@message.CreatedAt</p>
-                        }
-                        <form asp-controller="Messages" asp-action="SendMessage" method="post">
-                            @Html.AntiForgeryToken()
-                            <input type="hidden" name="BoardId" value="@Model.Id" />
-                            <input type="text" name="Content" required />
-                            <button type="submit">Send Message</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        }
-        @if (Model.Boxes.Count > 0)
-        {
-            <div class="box-container">
-                @foreach (var box in Model.Boxes)
-                {
-                    @await Html.PartialAsync("/Views/Boxes/_Details.cshtml", box)
-                }
-            </div>
-        }
-    </div>
-</div>
-
-<style>
-    .box-container {
-        display: flex;
-        overflow-x: auto;
-        white-space: nowrap;
-        padding-bottom: 20px;
-    }
-
-        .box-container > * {
-            flex: 0 0 auto;
-        }
-</style>
-
