--- a/Checkr/Views/Cards/Details.cshtml
+++ b/Checkr/Views/Cards/Details.cshtml
@@ -2,6 +2,18 @@
 
 <div class="card mt-4 mb-4 shadow-sm bg-dark text-light" style="border: none;">
     <div class="card-body" style="background-color: #2b2b2b;">
+        @if (Model.DueDate < DateTime.UtcNow)
+        {
+            <span class="badge rounded-pill mb-2" style="background: red; color: white;">Overdue</span>
+        }
+        else if ((Model.DueDate - DateTime.UtcNow).TotalDays > 7)
+        {
+            <span class="badge rounded-pill mb-2" style="background: green; color: white;">Due</span>
+        }
+        else
+        {
+            <span class="badge rounded-pill mb-2" style="background: grey; color: white;">Due Soon</span>
+        }
         <h5 class="card-title" style="color: #61afef; margin-bottom: 1rem;">@Model.Name</h5>
         @if (!string.IsNullOrEmpty(Model.ImageFileName))
         {
@@ -39,7 +51,7 @@
         <div class="w-100 mt-3">
             @foreach (var toDoItem in Model.ToDoItems)
             {
-                @await Html.PartialAsync("/Views/ToDoItems/_Details.cshtml", toDoItem)
+                @await Html.PartialAsync("/Views/ToDoItems/Details.cshtml", toDoItem)
             }
         </div>
     </div>
