--- a/Checkr/Views/Cards/Update.cshtml
+++ b/Checkr/Views/Cards/Update.cshtml
@@ -2,38 +2,44 @@
 @{
 }
 
-<h1>Update Card</h1>
-
-<form asp-controller="Cards" asp-action="Update" method="post" enctype="multipart/form-data">
-    @Html.AntiForgeryToken()
-    <input type="hidden" asp-for="BoxId" />
-    <div class="form-group">
-        <label asp-for="Name">Card Name</label>
-        <input asp-for="Name" class="form-control" />
-        <span asp-validation-for="Name" class="text-danger"></span>
+<div class="container d-flex justify-content-center align-items-center mt-3">
+    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+        <h1 class="text-center">@Model.Name</h1>
+        <form asp-controller="Cards" asp-action="Update" method="post" enctype="multipart/form-data">
+            @Html.AntiForgeryToken()
+            <input type="hidden" asp-for="BoxId" />
+            <div class="form-group">
+                <label asp-for="Name" class="form-label">Card Name</label>
+                <input asp-for="Name" class="form-control bg-dark text-white" />
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Content" class="form-label">Card Content</label>
+                <textarea asp-for="Content" class="form-control bg-dark text-white"></textarea>
+                <span asp-validation-for="Content" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="DueDate" class="form-label">Due Date</label>
+                <input type="datetime-local" asp-for="DueDate" class="form-control bg-dark text-white" />
+                <span asp-validation-for="DueDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFile" class="form-label">Card Image</label>
+                @if (!string.IsNullOrEmpty(Model.ImageFileName))
+                {
+                    <img class="d-block mt-1 mb-2" width="100" src="/images/@Model.ImageFileName">
+                    <input class="form-control bg-dark text-white" readonly asp-for="ImageFileName" />
+                }
+                <input class="form-control bg-dark text-white mt-1" type="file" asp-for="ImageFile" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <span>Created At</span>
+                <input readonly asp-for="CreatedAt" class="form-control bg-dark text-white" />
+            </div>
+            <div class="d-flex justify-content-center mt-3">
+                <button type="submit" class="btn btn-dark">Update Card</button>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label asp-for="Content">Card Content</label>
-        <textarea asp-for="Content" class="form-control"></textarea>
-        <span asp-validation-for="Content" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="DueDate">Due Date</label>
-        <input type="datetime-local" asp-for="DueDate" class="form-control" />
-        <span asp-validation-for="DueDate" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="ImageFile">Card Image</label>
-        @if (!string.IsNullOrEmpty(Model.ImageFileName))
-        {
-            <img class="d-block mt-2 mb-2" width="100" src="/images/@Model.ImageFileName">
-            <input class="form-control" readonly asp-for="ImageFileName" class="form-control" />
-        }
-        <input class="form-control" type="file" asp-for="ImageFile" />
-        <span asp-validation-for="ImageFile" class="text-danger"></span>
-    </div>
-    <div class="form-group">
-        Created at <input readonly asp-for="CreatedAt" />
-    </div>
-    <button type="submit" class="btn btn-primary">Update Card</button>
-</form>
+</div>
