--- a/Checkr/Views/Home/Index.cshtml
+++ b/Checkr/Views/Home/Index.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+
+<h1 class="text-center mt-5">Checkr</h1>
+
+<hr>
+
+<p class="lead text-center">The ultimate project management application.</>
+
+<p class="text-sm-end fw-lighter">Not by frontend engineers.</p>
