--- a/Checkr/Views/Shared/_Layout.cshtml
+++ b/Checkr/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark border-bottom box-shadow">
+        <nav class="navbar navbar-expand-sm navbar-dark border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">Checkr</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
