--- a/Checkr/Views/Tags/AddTagToBox.cshtml
+++ b/Checkr/Views/Tags/AddTagToBox.cshtml
@@ -1,39 +1,37 @@
 ﻿@model TagsViewModel
-@{
-}
 
-<h1>Add Tags</h1>
-
-<form asp-controller="Tags" asp-action="Create" method="get">
-    <input type="hidden" value="@Model.BoxId" name="BoxId" />
-    <button type="submit" class="btn btn-outline-success mb-2">Create New</button>
-</form>
+<div class="container d-flex justify-content-center align-items-center mt-5 mb-2">
+    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+        <form asp-controller="Tags" asp-action="Create" method="get">
+            <input type="hidden" value="@Model.BoxId" name="BoxId" />
+            <button type="submit" class="btn btn-outline-success">Create New</button>
+        </form>
+    </div>
+</div>
 
 @if (Model.BoardTags.Any())
 {
     <form asp-controller="Tags" asp-action="AddTagToBox" method="post">
         @Html.AntiForgeryToken()
         <input type="hidden" value="@Model.BoxId" name="BoxId" />
-        <div class="row">
+        <div class="row row-cols-1 row-cols-md-3 g-3">
             @foreach (var tag in Model.BoardTags)
             {
-                <div class="col-md-3 mb-3">
-                    <div class="card">
+                <div class="col">
+                    <div class="card bg-dark">
                         <div class="card-body">
-                            <div class="d-flex align-items-center justify-content-between">
-                                <div>
-                                    <input type="checkbox" name="SelectedTagsIds" class="form-check-input" id="tag@(tag.Id)" value="@(tag.Id)" @(Model.BoxTags.Contains(tag) ? "checked" : "")>
-                                    <label class="form-check-label ml-2 mb-0" for="tag@(tag.Id)">@(tag.Name)</label>
-                                </div>
+                            <div class="form-check">
+                                <input type="checkbox" name="SelectedTagsIds" class="form-check-input" id="tag@(tag.Id)" value="@(tag.Id)" @(Model.BoxTags.Contains(tag) ? "checked" : "")>
+                                <label class="form-check-label" for="tag@(tag.Id)">@tag.Name</label>
                             </div>
                         </div>
-                        <div class="card-footer" style="background: @tag.Hex">
+                        <div class="card-footer" style="background: @tag.Hex;">
                         </div>
                     </div>
                 </div>
             }
         </div>
-        <div class="col-md-12 mt-3">
+        <div class="mt-3">
             <button type="submit" class="btn btn-success">Add</button>
         </div>
     </form>
@@ -41,13 +39,19 @@
 
 <hr />
 
-@foreach (var tag in Model.BoardTags)
-{
-    <form asp-controller="Tags" asp-action="Update" asp-route-id="@(tag.Id)" method="get">
-        <button type="submit" class="btn btn-sm btn-outline-info">Update @(tag.Name)</button>
-    </form>
-    <form asp-controller="Tags" asp-action="Delete" asp-route-id="@(tag.Id)" method="post">
-        @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-sm btn-outline-danger">Delete @(tag.Name)</button>
-    </form>
-}
+<div class="row row-cols-1 row-cols-sm-2 g-3">
+    @foreach (var tag in Model.BoardTags)
+    {
+        <div class="col mb-3">
+            <form asp-controller="Tags" asp-action="Update" asp-route-id="@tag.Id" method="get">
+                <button type="submit" class="btn btn-outline-info w-100">Update @(tag.Name)</button>
+            </form>
+        </div>
+        <div class="col mb-3">
+            <form asp-controller="Tags" asp-action="Delete" asp-route-id="@tag.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this tag?');">
+                @Html.AntiForgeryToken()
+                <button type="submit" class="btn btn-outline-danger w-100">Delete @(tag.Name)</button>
+            </form>
+        </div>
+    }
+</div>
