--- a/Checkr/Views/Tags/Create.cshtml
+++ b/Checkr/Views/Tags/Create.cshtml
@@ -2,27 +2,23 @@
 @{
 }
 
-<h1>Create Tag</h1>
-
-<h4>Tag</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
         <form asp-controller="Tags" asp-action="Create" method="post">
             @Html.AntiForgeryToken()
             <input type="hidden" asp-for="BoardId" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control bg-dark text-white" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Hex" class="control-label"></label>
-                <input type="color" asp-for="Hex" />
+                <input type="color" asp-for="Hex" class="form-control form-control-color bg-dark text-white" />
                 <span asp-validation-for="Hex" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="d-flex justify-content-center mt-2">
+                <button type="submit" class="btn btn-secondary">Create</button>
             </div>
         </form>
     </div>
