--- a/Checkr/Views/Tags/Update.cshtml
+++ b/Checkr/Views/Tags/Update.cshtml
@@ -2,20 +2,25 @@
 @{
 }
 
-<h1>Update Tag</h1>
-
-<form asp-controller="Tags" asp-action="Update" method="post">
-    @Html.AntiForgeryToken()
-    <div class="form-group">
-        <label asp-for="Name">Tag Name</label>
-        <input value="@Model.Name" asp-for="Name" class="form-control">
-        <span asp-validation-for="Name" class="text-danger"></span>
+<div class="container d-flex justify-content-center align-items-center mt-5">
+    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+        <h1 class="text-center">@Model.Name</h1>
+        <form asp-controller="Tags" asp-action="Update" method="post">
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                <label asp-for="Name" class="form-label">Tag Name</label>
+                <input value="@Model.Name" asp-for="Name" class="form-control bg-dark text-white">
+                <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group mt-3">
+                <label asp-for="Hex" class="form-label">Tag Hex</label>
+                <input type="color" value="@Model.Hex" asp-for="Hex" class="form-control form-control-color bg-dark text-white">
+                <span asp-validation-for="Hex" class="text-danger"></span>
+            </div>
+            <hr>
+            <div class="d-flex justify-content-center">
+                <button type="submit" class="btn btn-dark">Update Tag</button>
+            </div>
+        </form>
     </div>
-    <div class="form-group">
-        <label class="control-label" asp-for="Hex">Tag Hex</label>
-        <input type="color" value="@Model.Hex" asp-for="Hex">
-        <span asp-validation-for="Hex" class="text-danger"></span>
-    </div>
-    <hr>
-    <button type="submit" class="btn btn-outline-success">Update Tag</button>
-</form>
+</div>
