--- a/Checkr/Views/ToDoItems/Create.cshtml
+++ b/Checkr/Views/ToDoItems/Create.cshtml
@@ -4,10 +4,10 @@
 
 <form asp-controller="ToDoItems" asp-action="Create" method="post">
     @Html.AntiForgeryToken()
+    <input type="hidden" asp-for="CardId" />
     <div class="form-group">
-        <input type="hidden" asp-for="CardId" value="@Model.CardId" />
-        <label asp-for="Content" class="col-form-label">ToDo Item Content</label>
-        <input asp-for="Content" class="form-control" />
+        <label asp-for="Content">ToDo Item Content</label>
+        <input asp-for="Content" class="form-control bg-dark text-white" />
         <span asp-validation-for="Content" class="text-danger"></span>
     </div>
     <div class="form-group form-check">
@@ -15,5 +15,7 @@
         <label asp-for="IsCompleted" class="form-check-label">Completed</label>
         <span asp-validation-for="IsCompleted" class="text-danger"></span>
     </div>
-    <button type="submit" class="btn btn-primary">Add ToDo Item</button>
+    <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-secondary">Create</button>
+    </div>
 </form>
