--- a/Checkr/Views/ToDoItems/Details.cshtml
+++ b/Checkr/Views/ToDoItems/Details.cshtml
@@ -5,7 +5,7 @@
         <div>
             @if (Model.IsCompleted)
             {
-                <h5 class="card-title"><del>@Model.Content</del></h5>
+                <h5 class="card-title text-decoration-line-through">@Model.Content</h5>
             }
             else
             {
@@ -13,19 +13,22 @@
             }
         </div>
         <div class="dropdown">
-            <button class="btn btn-sm btn-outline-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-three-dots-vertical"></i>
             </button>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuButton">
+            <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuButton">
                 <li>
                     <form asp-controller="ToDoItems" asp-action="Update" asp-route-id="@Model.Id" method="get">
-                        <button type="submit" class="dropdown-item">Update</button>
+                        <button type="submit" class="dropdown-item text-light bg-dark">Update</button>
                     </form>
+                </li>
+                <li>
+                    <hr class="dropdown-divider border-light">
                 </li>
                 <li>
                     <form asp-controller="ToDoItems" asp-action="Delete" asp-route-id="@Model.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
                         @Html.AntiForgeryToken()
-                        <button type="submit" class="dropdown-item text-danger">Delete</button>
+                        <button type="submit" class="dropdown-item text-danger bg-dark">Delete</button>
                     </form>
                 </li>
             </ul>
