--- a/Checkr/wwwroot/css/site.css
+++ b/Checkr/wwwroot/css/site.css
@@ -1,5 +1,7 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    position: relative;
+    min-height: 100%;
 }
 
 @media (min-width: 768px) {
@@ -8,35 +10,48 @@ html {
   }
 }
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
-
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
 body {
     background: linear-gradient(to bottom right, #2e2e2e, #292929);
     color: #d0d0d0;
     font-family: Arial, sans-serif;
 }
 
-/* Credits: https://codepen.io/ */
+.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+}
 
-/* ===== Scrollbar CSS ===== */
-/* Firefox */
+.board-custom {
+    transition: transform 0.2s ease-in-out;
+}
+
+    .board-custom:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        z-index: 1;
+    }
+
+.box-container-custom {
+    border-color: purple;
+    border-width: 4px;
+    border-style: solid;
+}
+
+.box-container {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding-bottom: 20px;
+}
+
+    .box-container > * {
+        flex: 0 0 auto;
+    }
+
 * {
     scrollbar-width: thin;
     scrollbar-color: #322a31 #5f585a;
 }
 
-    /* Chrome, Edge, and Safari */
     *::-webkit-scrollbar {
         width: 16px;
     }
