--- a/Checkr/Views/Boards/Users.cshtml
+++ b/Checkr/Views/Boards/Users.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+    <div class="card card-custom p-4 border-0 shadow-lg text-white">
         <h1 class="text-center">Members</h1>
 
         @if (Model.Users.Any())
