--- a/Checkr/Views/ToDoItems/Update.cshtml
+++ b/Checkr/Views/ToDoItems/Update.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="card p-4 border-0 shadow-lg text-white" style="background-color: #333333; max-width: 400px;">
+    <div class="card card-custom p-4 border-0 shadow-lg text-white">
         <form asp-controller="ToDoItems" asp-action="Update" method="post">
             @Html.AntiForgeryToken()
             <input type="hidden" asp-for="CardId" />
