--- a/Checkr/Views/Boxes/Details.cshtml
+++ b/Checkr/Views/Boxes/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Box
 
-<div class="col-md-4 mb-4 m-3 box-container-custom">
-    <div class="card box-card shadow-sm bg-dark">
+<div class="col-md-4 mb-4 m-3 bg-purple-custom">
+    <div class="card scrollable-custom shadow-sm bg-dark">
         <div class="card-body">
             <h5 class="card-title text-light">@Model.Name</h5>
             <div class="mb-3">
@@ -34,13 +34,13 @@
                         </li>
                         <li>
                             <form asp-controller="Boxes" asp-action="Update" asp-route-id="@Model.Id" method="get">
-                                <button type="submit" class="dropdown-item text-light bg-dark">Update Box</button>
+                                <button type="submit" class="dropdown-item text-light bg-dark">Update Box <i class="bi bi-pencil"></i></button>
                             </form>
                         </li>
                         <li>
                             <form asp-controller="Boxes" asp-action="Delete" asp-route-id="@Model.Id" asp-route-boardId="@Model.BoardId" method="post" onsubmit="return confirm('Confirm?');">
                                 @Html.AntiForgeryToken()
-                                <button type="submit" class="dropdown-item text-danger bg-dark">Delete Box</button>
+                                <button type="submit" class="dropdown-item text-danger bg-dark">Delete Box <i class="bi bi-trash"></i></button>
                             </form>
                         </li>
                     </ul>
