--- a/Checkr/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Checkr/Areas/Identity/Pages/Account/Login.cshtml
@@ -1,13 +1,12 @@
 ﻿@page
 @model LoginModel
-
 @{
     ViewData["Title"] = "Log in";
 }
 
-<h1>@ViewData["Title"]</h1>
-<div class="row">
-    <div class="col-md-4">
+<div class="row d-flex justify-content-center align-items-center mt-5">
+    <div class="col-md-4 bg-purple-custom p-3">
+        <h1>@ViewData["Title"]</h1>
         <section>
             <form id="account" method="post">
                 <h2>Use a local account to log in.</h2>
