--- a/Checkr/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Checkr/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="row">
-    <div class="col-md-4">
+<div class="row d-flex justify-content-center align-items-center mt-5">
+    <div class="col-md-4 bg-purple-custom p-3">
+        <h1>@ViewData["Title"]</h1>
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
