--- a/Checkr/Views/Boards/List.cshtml
+++ b/Checkr/Views/Boards/List.cshtml
@@ -14,7 +14,7 @@
             {
                 <div class="col-md-4">
                     <a asp-action="Details" asp-route-id="@board.Id" class="text-decoration-none">
-                        <div class="card mb-3 shadow-sm bg-dark text-light compact-card board-custom p-2">
+                        <div class="card mb-3 shadow-sm bg-dark text-light compact-card board-container p-2">
                             <div class="card-body position-relative">
                                 <h5 class="card-title">@board.Name</h5>
                                 <div class="dropdown position-absolute top-0 end-0">
