--- a/Checkr/Views/Cards/Details.cshtml
+++ b/Checkr/Views/Cards/Details.cshtml
@@ -14,12 +14,12 @@
         {
             <span class="badge rounded-pill mb-2 bg-warning text-white">Due Soon</span>
         }
-        <h5 class="card-title card-title-custom">@Model.Name</h5>
+        <h5 class="card-title text-white fw-bolder mb-1">@Model.Name</h5>
         @if (!string.IsNullOrEmpty(Model.ImageFileName))
         {
-            <img width="100" class="mb-2 card-image" src="/images/@Model.ImageFileName">
+            <img width="100" class="d-block" src="/images/@Model.ImageFileName">
         }
-        <p class="lead">@Model.Content</p>
+        <p class="fw-lighter">@Model.Content</p>
         <div class="d-flex align-items-start">
             <div class="dropdown me-2">
                 <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,22 +33,23 @@
                 <button class="btn btn-outline-secondary dropdown-toggle btn-sm" type="button" id="cardActionsDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                     <i class="bi bi-three-dots"></i>
                 </button>
-                <ul class="dropdown-menu" aria-labelledby="cardActionsDropdown">
+                <ul class="dropdown-menu bg-dark" aria-labelledby="cardActionsDropdown">
                     <li>
                         <form asp-controller="Cards" asp-action="Update" asp-route-id="@Model.Id" method="get" class="m-0">
-                            <button type="submit" class="dropdown-item">Update Card <i class="bi bi-pencil"></i></button>
+                            <button type="submit" class="dropdown-item text-light bg-dark">Update Card <i class="bi bi-pencil"></i></button>
                         </form>
                     </li>
                     <li>
                         <form asp-controller="Cards" asp-action="Delete" asp-route-id="@Model.Id" asp-route-boxId="@Model.BoxId" method="post" onsubmit="return confirm('Confirm?');">
                             @Html.AntiForgeryToken()
-                            <button type="submit" class="dropdown-item text-danger">Delete Card <i class="bi bi-trash"></i></button>
+                            <button type="submit" class="dropdown-item text-danger bg-dark">Delete Card <i class="bi bi-trash"></i></button>
                         </form>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="w-100 mt-3">
+            <span class="badge rounded-pill bg-dark text-white">@Model.ToDoItems.Count(t => t.IsCompleted)/@Model.ToDoItems.Count</span>
             @foreach (var toDoItem in Model.ToDoItems)
             {
                 @await Html.PartialAsync("/Views/ToDoItems/Details.cshtml", toDoItem)
