--- a/Checkr/Views/Shared/_LoginPartial.cshtml
+++ b/Checkr/Views/Shared/_LoginPartial.cshtml
@@ -9,11 +9,12 @@
     {
         <li class="nav-item dropdown">
             <a id="navbarDropdown" class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                @UserManager.GetUserName(User)
+                <i class="bi bi-person"></i>
             </a>
-            <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
+            <div class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="navbarDropdown">
+                <p class="dropdown-item-text text-white">@UserManager.GetUserName(User)</p>
                 <a id="manage" class="dropdown-item text-white bg-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Manage Account</a>
-                <hr class="dropdown-divider bg-light"></hr>
+                <hr class="dropdown-divider bg-light">
                 <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                     <button id="logout" type="submit" class="dropdown-item text-white bg-dark">Logout</button>
                 </form>
