--- a/Checkr/Views/Tags/AddTagToBox.cshtml
+++ b/Checkr/Views/Tags/AddTagToBox.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TagsViewModel
 
-<div class="container d-flex justify-content-center align-items-center mt-5 mb-2">
+<div class="container d-flex justify-content-center align-items-center mt-5 mb-5">
     <div class="card card-custom p-4 border-0 shadow-lg text-white">
         <form asp-controller="Tags" asp-action="Create" method="get">
             <input type="hidden" value="@Model.BoxId" name="BoxId" />
@@ -32,25 +32,26 @@
             }
         </div>
         <div class="mt-3">
-            <button type="submit" class="btn btn-success">Add</button>
+            <button type="submit" class="btn btn-success">Apply Changes</button>
         </div>
     </form>
 }
 
 <hr />
 
+<h1>Tags</h1>
 <div class="row row-cols-1 row-cols-sm-2 g-3">
     @foreach (var tag in Model.BoardTags)
     {
         <div class="col mb-3">
             <form asp-controller="Tags" asp-action="Update" asp-route-id="@tag.Id" method="get">
-                <button type="submit" class="btn btn-outline-info w-100">Update @(tag.Name)</button>
+                <button type="submit" class="btn w-100" style="background: @tag.Hex">Update @(tag.Name) <i class="bi bi-pencil"></i></button>
             </form>
         </div>
         <div class="col mb-3">
             <form asp-controller="Tags" asp-action="Delete" asp-route-id="@tag.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this tag?');">
                 @Html.AntiForgeryToken()
-                <button type="submit" class="btn btn-outline-danger w-100">Delete @(tag.Name)</button>
+                <button type="submit" class="btn btn-outline-danger w-100">Delete @(tag.Name) <i class="bi bi-trash"></i></button>
             </form>
         </div>
     }
