--- a/Checkr/Views/ToDoItems/Details.cshtml
+++ b/Checkr/Views/ToDoItems/Details.cshtml
@@ -19,7 +19,7 @@
             <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuButton">
                 <li>
                     <form asp-controller="ToDoItems" asp-action="Update" asp-route-id="@Model.Id" method="get">
-                        <button type="submit" class="dropdown-item text-light bg-dark">Update</button>
+                        <button type="submit" class="dropdown-item text-light bg-dark">Update ToDoItem <i class="bi bi-pencil"></i></button>
                     </form>
                 </li>
                 <li>
@@ -28,7 +28,7 @@
                 <li>
                     <form asp-controller="ToDoItems" asp-action="Delete" asp-route-id="@Model.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this item?');">
                         @Html.AntiForgeryToken()
-                        <button type="submit" class="dropdown-item text-danger bg-dark">Delete</button>
+                        <button type="submit" class="dropdown-item text-danger bg-dark">Delete ToDoItem <i class="bi bi-trash"></i></button>
                     </form>
                 </li>
             </ul>
