--- a/Checkr/Views/Cards/Checklist.cshtml
+++ b/Checkr/Views/Cards/Checklist.cshtml
@@ -4,7 +4,7 @@
 
 <h1 class="text-center mt-5">@Model.Name</h1>
 <div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="card card-custom p-4 border-0 shadow-lg text-white p-5">
+    <div class="card bg-dark-custom w-100 border-0 shadow-lg text-white p-5">
         <h1 class="text-center">Checklist</h1>
         @foreach (var toDoItem in Model.ToDoItems)
         {
