--- a/Checkr/Views/Home/Index.cshtml
+++ b/Checkr/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <hr>
             <p class="h1 fw-light mt-5">The ultimate project management application</p>
             <p class="fw-lighter">Tailored for individual & team use</p>
-            <a class="btn btn-dark mt-5 mb-5" asp-controller="Boards" asp-action="List">Boards <i class="bi bi-arrow-right"></i></a>
+            <a class="btn btn-dark mt-5 mb-5" asp-controller="Boards" asp-action="Index">Boards <i class="bi bi-arrow-right"></i></a>
         </div>
     </div>
 </div>
