--- a/Checkr/Views/Shared/_Layout.cshtml
+++ b/Checkr/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Boards" asp-action="List">Boards</a>
+                            <a class="nav-link" asp-controller="Boards" asp-action="Index">Boards</a>
                         </li>
                     </ul>
                     <div class="d-flex">
