--- a/Checkr/Views/Boards/Users.cshtml
+++ b/Checkr/Views/Boards/Users.cshtml
@@ -1,46 +1,34 @@
 ﻿@model Board
 @{
-    ViewData["BoardId"] = Model.Id;
 }
 
 <div class="container d-flex justify-content-center align-items-center mt-5">
     <div class="card card-custom p-4 border-0 shadow-lg text-white">
         <h1 class="text-center">Members</h1>
-
-        @if (Model.Users.Any())
-        {
-            <ul>
-                @foreach (var user in Model.Users)
+        <ul>
+            @foreach (var user in Model.Users)
+            {
+                if (Model.OwnerId == user.Id)
                 {
-                    if (Model.OwnerId == user.Id)
-                    {
-                        <li>@user.UserName (Owner)</li>
-                    }
-                    else
-                    {
-                        <div class="d-flex">
-                        <li>@user.UserName</li>
-                        <form asp-action="RemoveUserFromBoard" asp-route-id="@Model.Id" asp-route-userId="@user.Id" method="post">
-                                @Html.AntiForgeryToken()
-                            <button type="submit" class="btn btn-outline-danger btn-sm mx-1">Remove Member</button>
-                        </form>
-                </div>
-                    }
+                    <li class="my-1">@user.UserName (Owner)</li>
                 }
+                else
+                {
+                    <li class="my-1">@user.UserName</li>
+                    <form asp-action="RemoveUserFromBoard" asp-route-id="@Model.Id" asp-route-userId="@user.Id" method="post">
+                        @Html.AntiForgeryToken()
+                        <button type="submit" class="btn btn-outline-danger btn-sm mx-1">Remove Member</button>
+                    </form>
+                }
+            }
         </ul>
-        }
-        else
-        {
-        <p>No members found for this board.</p>
-        }
-
-    <div class="dropdown me-2">
-        <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
-            <i class="bi bi-plus"></i>
-        </button>
-        <div class="p-2 dropdown-menu dropdown-menu-end bg-dark text-light" aria-labelledby="togglePartialViewButton">
-                @await Html.PartialAsync("AddUserToBoard", ViewData)
+        <div class="dropdown me-2">
+            <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="bi bi-plus"></i>
+            </button>
+            <div class="p-2 dropdown-menu dropdown-menu-end bg-dark text-light" aria-labelledby="togglePartialViewButton">
+                @await Html.PartialAsync("/Views/Invitations/Create.cshtml", new InvitationDto { BoardId = Model.Id })
+            </div>
         </div>
-    </div>
     </div>
 </div>
