--- a/Checkr/Views/Boxes/Update.cshtml
+++ b/Checkr/Views/Boxes/Update.cshtml
@@ -2,21 +2,75 @@
 @{
 }
 
-<div class="container d-flex justify-content-center align-items-center mt-5">
-    <div class="card card-custom p-4 border-0 shadow-lg text-white">
-        <h1 class="text-center">@Model.Name</h1>
-        <form asp-controller="Boxes" asp-action="Update" method="post">
-            @Html.AntiForgeryToken()
-            <input type="hidden" asp-for="BoardId" />
-            <div class="form-group">
-                <label asp-for="Name" class="form-label">Box Name</label>
-                <input asp-for="Name" class="form-control bg-dark text-white" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+<form asp-controller="Boxes" asp-action="Update" method="post">
+    @Html.AntiForgeryToken()
+    <div class="card card-custom p-4 border-0 shadow-lg text-white mt-2 mw-100">
+        <input type="hidden" asp-for="BoardId" />
+        <div class="form-group">
+            <label asp-for="Name" class="form-label">Box Name</label>
+            <input asp-for="Name" class="form-control bg-dark text-white" />
+            <span asp-validation-for="Name" class="text-danger"></span>
+        </div>
+    </div>
+    <hr>
+    <div class="card card-custom p-4 border-0 shadow-lg text-white mt-2 mw-100">
+        <div class="row row-cols-1 row-cols-md-3 g-3">
+            @foreach (var tag in Model.BoardTags)
+            {
+                <div class="col">
+                    <div class="card bg-dark">
+                        <div class="card-body">
+                            <div class="form-check">
+                                <input type="checkbox" name="SelectedTagsIds" class="form-check-input" id="tag@(tag.Id)" value="@(tag.Id)" @(Model.BoxTags.Contains(tag) ? "checked" : "")>
+                                <label class="form-check-label" for="tag@(tag.Id)">@tag.Name</label>
+                            </div>
+                        </div>
+                        <div class="card-footer" style="background: @tag.Hex;">
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+    <div class="card card-custom p-4 border-0 shadow-lg text-white mt-2">
+        <button type="submit" class="btn btn-success">Apply Changes</button>
+    </div>
+</form>
+
+<div class="card card-custom p-4 border-0 shadow-lg text-white mt-2 mw-100">
+    <div class="row row-cols-1 row-cols-md-6 g-3">
+        @foreach (var tag in Model.BoardTags)
+        {
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="card card-custom p-4 border-0 shadow-lg text-white">
+                    <button class="btn btn-secondary btn-sm dropdown-toggle" style="background: @tag.Hex" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        @tag.Name
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuButton">
+                        <li>
+                            <a asp-controller="Tags" asp-action="Update" asp-route-id="@tag.Id" class="dropdown-item text-light bg-dark">Update @tag.Name <i class="bi bi-pencil"></i></a>
+                        </li>
+                        <li>
+                            <form asp-controller="Tags" asp-action="Delete" asp-route-id="@tag.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this tag?');">
+                                @Html.AntiForgeryToken()
+                                <button type="submit" class="dropdown-item text-danger bg-dark">Delete @tag.Name <i class="bi bi-trash"></i></button>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <hr>
-            <div class="d-flex justify-content-center">
-                <button type="submit" class="btn btn-dark">Update Box</button>
+        }
+        <div class="container d-flex justify-content-center align-items-center">
+            <div class="card card-custom p-4 border-0 shadow-lg text-white">
+                <div class="dropdown me-2">
+                    <button class="btn btn-sm btn-outline-secondary" type="button" id="togglePartialViewButton" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-plus"></i>New Tag
+                    </button>
+                    <div class="p-2 dropdown-menu dropdown-menu-end bg-dark text-light" aria-labelledby="togglePartialViewButton">
+                        @await Html.PartialAsync("/Views/Tags/Create.cshtml", new TagDto { BoardId = Model.BoardId })
+                    </div>
+                </div>
             </div>
-        </form>
+        </div>
     </div>
 </div>
