Add Middleware, Update Invitation, Add Tag Details View, Wrap Chained Expressions

--- a/Checkr/Views/Shared/_LoginPartial.cshtml
+++ b/Checkr/Views/Shared/_LoginPartial.cshtml
@@ -13,7 +13,7 @@
     {
         var userId = UserManager.GetUserId(User);
         var invitations = await InvitationService.GetAllReceivedInvitationsForUserAsync(userId!);
-        invitationsCount = invitations.Count();
+        invitationsCount = invitations.Count(i => i.Status == Status.Pending);
     }
 }
 
