--- a/Checkr/Views/Boxes/Update.cshtml
+++ b/Checkr/Views/Boxes/Update.cshtml
@@ -41,24 +41,7 @@
     <div class="row row-cols-1 row-cols-md-6 g-3">
         @foreach (var tag in Model.BoardTags)
         {
-            <div class="container d-flex justify-content-center align-items-center">
-                <div class="card card-custom p-4 border-0 shadow-lg text-white">
-                    <button class="btn btn-secondary btn-sm dropdown-toggle" style="background: @tag.Hex" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-                        @tag.Name
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-end bg-dark" aria-labelledby="dropdownMenuButton">
-                        <li>
-                            <a asp-controller="Tags" asp-action="Update" asp-route-id="@tag.Id" class="dropdown-item text-light bg-dark">Update @tag.Name <i class="bi bi-pencil"></i></a>
-                        </li>
-                        <li>
-                            <form asp-controller="Tags" asp-action="Delete" asp-route-id="@tag.Id" method="post" onsubmit="return confirm('Are you sure you want to delete this tag?');">
-                                @Html.AntiForgeryToken()
-                                <button type="submit" class="dropdown-item text-danger bg-dark">Delete @tag.Name <i class="bi bi-trash"></i></button>
-                            </form>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            @await Html.PartialAsync("/Views/Tags/Details.cshtml", tag)
         }
         <div class="container d-flex justify-content-center align-items-center">
             <div class="card card-custom p-4 border-0 shadow-lg text-white">
