--- a/Checkr/Views/Invitations/Index.cshtml
+++ b/Checkr/Views/Invitations/Index.cshtml
@@ -9,9 +9,9 @@
         {
             <div class="card mt-4 mb-4 shadow-sm bg-dark text-light">
                 <div class="card-body d-flex justify-content-between align-items-center">
-                    @if (invitation.IsAccepted)
+                    @if (invitation.Status == Status.Accepted)
                     {
-                        <p class="lead">Joined @invitation.Board.Name (Invited by @invitation.Sender.FirstName)</p>
+                        <p class="lead">Joined <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
                         <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
 
                         <form asp-controller="Invitations" asp-action="RespondToInvitation" asp-route-id="@invitation.Id" method="post">
@@ -19,16 +19,25 @@
                             <button type="submit" name="isAccepted" value="false" class="btn btn-danger">Delete</button>
                         </form>
                     }
-                    else
+                    else if (invitation.Status == Status.Pending)
                     {
-                        <p class="lead">@invitation.Sender.FirstName invited you to join @invitation.Board.Name!</p>
+                        <p class="lead"><span class="fw-bold">@invitation.Sender.FirstName</span> invited you to join <span class="fw-bold">@invitation.Board.Name</span>!</p>
                         <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
-
 
                         <form asp-controller="Invitations" asp-action="RespondToInvitation" asp-route-id="@invitation.Id" method="post">
                             @Html.AntiForgeryToken()
                             <button type="submit" name="isAccepted" value="true" class="btn btn-success">Accept</button>
                             <button type="submit" name="isAccepted" value="false" class="btn btn-danger">Decline</button>
+                        </form>
+                    }
+                    else
+                    {
+                        <p class="lead">Rejected to join <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
+                        <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
+
+                        <form asp-controller="Invitations" asp-action="RespondToInvitation" asp-route-id="@invitation.Id" method="post">
+                            @Html.AntiForgeryToken()
+                            <button type="submit" name="isAccepted" value="false" class="btn btn-danger">Delete</button>
                         </form>
                     }
                 </div>
